# codex_eeprom_emulation

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
app/: Cargo.toml  README.md
app/src/: main.rs
hdl/: README.md  run_ghdl.bat  waves.vcd
hdl/src/: spi_flash.vhd
hdl/tb/: tb_spi_flash.vhd
sw/: README.md
sw/flash_ll/: CMakeLists.txt  README.md
sw/flash_ll/include/: flash_ll.h  flash_ll_regs.h
sw/flash_ll/sim/: CMakeLists.txt  README.md
sw/flash_ll/sim/include/: axi_spi_sim.h  flash_ll_io_sim.h  flash_sim.h  sim_test.h
sw/flash_ll/sim/src/: axi_spi_sim.c  flash_ll_io_sim.c  flash_sim.c  sim_main.c
sw/flash_ll/src/: flash_ll.c
sw/rust/eeprom_emul/: Cargo.toml
sw/rust/eeprom_emul/src/: lib.rs
sw/rust/eeprom_emul/tests/: sim_tests.rs
sw/rust/flash_core/: Cargo.toml
sw/rust/flash_core/src/: lib.rs
sw/rust/flash_ll/: Cargo.toml
sw/rust/flash_ll/src/: lib.rs
sw/rust/flash_ll/tests/: sim_tests.rs
sw/rust/flash_ll_sys/: Cargo.toml  build.rs
sw/rust/flash_mock/: Cargo.toml
sw/rust/flash_mock/src/: lib.rs
